# relayx

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  Dockerfile  Makefile  README.md  config.json.default
.github/workflows/: ci.yml  clippy.yml  docker-publish.yml  fast-ci.yml  minimal-ci.yml  release.yml  simple-ci.yml
docs/: COMPLIANCE_REPORT.md  GETCAPABILITIES_COMPLIANCE_REPORT.md  GETSTATUS_COMPLIANCE_REPORT.md  KEY_OBJECTS_VALIDATION.md  RELAYER_GET_CAPABILITIES_SPEC.md  RELAYER_GET_EXCHANGE_RATE_SPEC.md  RELAYER_GET_STATUS_SPEC.md  RELAYER_SEND_TRANSACTION_MULTICHAIN_SPEC.md  RELAYER_SEND_TRANSACTION_SPEC.md  SENDTRANSACTIONMULTICHAIN_COMPLIANCE_REPORT.md  SENDTRANSACTION_COMPLIANCE_REPORT.md  STRUCT_VALIDATION_SUMMARY.txt
examples/: test_capabilities.rs  test_client.rs
resources/: abi.json
scripts/: setup-dev.sh  test-workflow-commands.sh  test_capabilities_spec.sh  test_exchange_rate_spec.sh  test_getstatus_spec.sh  test_sendtransaction_spec.sh  test_sendtransactionmultichain_spec.sh  test_service.sh
scripts/postman/: RelayX.postman_collection.json  RelayX.postman_environment.json
src/: config.rs  lib.rs  main.rs  rpc.rs  storage.rs  types.rs
tests/: rpc_tests.rs  test_relayx_service.sh
