[package]
name = "relayx"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.6", features = ["full", "node-bindings", "rpc-types-eth"] }
alloy-dyn-abi = "0.8.26"
alloy-eip7702 = { version = "0.4", features = ["k256", "serde"] }
alloy-rlp = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4"
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rocksdb = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8"

